--- a/app/views/psd-revised-flow/add-new-product/product-manual.html
+++ b/app/views/psd-revised-flow/add-new-product/product-manual.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
+Product page – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Add product" %}
@@ -70,61 +70,6 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Country of origin
-          </dt>
-          <dd class="govuk-summary-list__value">
-            South Korea
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> address</span></a>
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Description
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <p class="govuk-body">Comes in box 15 x 10 x 4 cm, Bluetooth earphones, weight 52g 
-            </p>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
-            </ul>
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Product markings
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <p class="govuk-body">CE</p>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
-            </ul>
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Webpage
-          </dt>
-          <dd class="govuk-summary-list__value">
-            <p class="govuk-body">https://www.samsung.com/uk/business/audio-sound/galaxy-buds/galaxy-buds2-graphite-sm-r177nzkaeua/</p>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
-            </ul>
-          </dd>
-        </div>
-      </dl>
-
-    <h2 class="govuk-heading-m">Categories</h2>
-      <dl class="govuk-summary-list govuk-!-margin-bottom-8">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
             Product category
           </dt>
           <dd class="govuk-summary-list__value">
@@ -145,7 +90,20 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
+
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Country of origin
+          </dt>
+          <dd class="govuk-summary-list__value">
+            South Korea
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> address</span></a>
+          </dd>
+        </div>
       </dl>
+
 
     <h2 class="govuk-heading-m">Product identifiers</h2>
       <dl class="govuk-summary-list govuk-!-margin-bottom-8">
@@ -174,8 +132,36 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
       </dl>    
       
       
-  <h2 class="govuk-heading-m">Availability</h2>
+  <h2 class="govuk-heading-m">Additional information</h2>
     <dl class="govuk-summary-list govuk-!-margin-bottom-8">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Description
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">Comes in box 15 x 10 x 4 cm, Bluetooth earphones, weight 52g 
+          </p>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <ul class="govuk-summary-list__actions-list">
+            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+          </ul>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Product markings
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">CE</p>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <ul class="govuk-summary-list__actions-list">
+            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+          </ul>
+        </dd>
+      </div>
+
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Market date
@@ -186,6 +172,21 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> name</span></a>
         </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Webpage
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">https://www.samsung.com/uk/business/audio-sound/galaxy-buds/galaxy-buds2-graphite-sm-r177nzkaeua/</p>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <ul class="govuk-summary-list__actions-list">
+            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+          </ul>
+        </dd>
+      </div>
+
     </dl>   
 
   <div class="button-container">
