--- a/app/views/psd-revised-flow/search/product.html
+++ b/app/views/psd-revised-flow/search/product.html
@@ -9,7 +9,7 @@
       <a class="govuk-breadcrumbs__link" href="homepage-ur">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="#">Products</a>
+      <a class="govuk-breadcrumbs__link" href="products">Products</a>
     </li>
   </ol>
 </div>
@@ -30,20 +30,12 @@
       <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Swan Gas Hob SXB7040B 60cm</h1>
       <span class="govuk-caption-m"><strong>PSD ref: </strong>2401-0067</span>
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-      <p class="govuk-body-s govuk-!-margin-bottom-1"><strong>Product record owner:</strong> OPSS Incident Management</p>
+      <p class="govuk-body-s govuk-!-margin-bottom-1"><strong>Product record owner:</strong> <a href="#">OPSS Incident Management</a></p>
       <p class="govuk-body-s govuk-!-margin-bottom-1"><strong>Created:</strong> 3 January 2024</p>
       <p class="govuk-body-s govuk-!-margin-bottom-8"><strong>Last updated:</strong> 14 February 2024</p>
 
       <h2 class="govuk-heading-m ">Product details</h2>
       <dl class="govuk-summary-list govuk-!-margin-bottom-8">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            PSD reference
-          </dt>
-          <dd class="govuk-summary-list__value">
-            2401-0067
-          </dd>
-        </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Brand name
@@ -62,43 +54,6 @@
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Country of origin
-        </dt>
-        <dd class="govuk-summary-list__value">
-          China
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Description
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">Comes in box 90 x 90 x 40 cm, weight 3.6kg, 4 gas burners, 4 knobs, gun metal grey
-          </p>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Product markings
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">CE</p>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Webpage
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">https://swan-brand.co.uk/product-list/cooking-baking/hobs/gas-hob-sxb7040b-60cm</p>
-        </dd>
-      </div>
-    </dl>
-
-  <h2 class="govuk-heading-m">Categories</h2>
-    <dl class="govuk-summary-list govuk-!-margin-bottom-8">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
           Product category
         </dt>
         <dd class="govuk-summary-list__value">
@@ -113,8 +68,17 @@
           Gas hob
         </dd>
       </div>
-    </dl>
 
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Country of origin
+        </dt>
+        <dd class="govuk-summary-list__value">
+          China
+        </dd>
+      </div>
+  
+    </dl>
 
   <h2 class="govuk-heading-m">Product identifiers</h2>
     <dl class="govuk-summary-list govuk-!-margin-bottom-8">
@@ -135,34 +99,61 @@
         </dd>
       </div>
     </dl>    
+
+
+    <h2 class="govuk-heading-m">Additional information</h2>
+    <dl class="govuk-summary-list govuk-!-margin-bottom-8">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Description
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">Comes in box 90 x 90 x 40 cm, weight 3.6kg, 4 gas burners, 4 knobs, gun metal grey
+          </p>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Product markings
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">CE</p>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Market date
+        </dt>
+        <dd class="govuk-summary-list__value">
+          After 1 January 2021
+        </dd>
+      </div>
+
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Webpage
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">https://swan-brand.co.uk/product-list/cooking-baking/hobs/gas-hob-sxb7040b-60cm</p>
+        </dd>
+      </div>
+    </dl>   
     
-    
-<h2 class="govuk-heading-m">Availability</h2>
-  <dl class="govuk-summary-list govuk-!-margin-bottom-8">
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
-        Market date
-      </dt>
-      <dd class="govuk-summary-list__value">
-        After 1 January 2021
-      </dd>
-  </dl>   
-
-  <h2 class="govuk-heading-m">Notifications</h2>
-  <dl class="govuk-summary-list govuk-!-margin-bottom-8">
-    <div class="govuk-summary-list__row">
-      <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8;">
-        Swan Gas Hobs: Serious risk of poisoning <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">6 July 2023</p>
-      </dd>
-    </div>
-    <div class="govuk-summary-list__row">
-      <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8" >
-        Swan Gas Hobs: Serious risk of poisoning, burns or gas explosion and/or fire <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">14 February 2024</p>
-      </dd>
-    </div>
-
-  </dl>
-
+    <h2 class="govuk-heading-m">Notifications</h2>
+    <dl class="govuk-summary-list govuk-!-margin-bottom-8">
+      <div class="govuk-summary-list__row">
+        <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8;">
+          Swan Gas Hobs: Serious risk of poisoning <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">6 July 2023</p>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8" >
+          Swan Gas Hobs: Serious risk of poisoning, burns or gas explosion and/or fire <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">14 February 2024</p>
+        </dd>
+      </div>
+  
+    </dl>
+  
 
 <div class="button-container">
   <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
