--- a/app/views/psd-revised-flow/add-new-product/product-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/product-bl.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
+Product page – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Add product" %}
@@ -179,7 +179,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 
   <div class="button-container">
     <button type="submit" class="govuk-button" data-module="govuk-button" id="not-found-it-1" name="not-found-it" value="yes">
-      Add to notification and create record 
+      Add to notification  
     </button>
   </div>
 
