--- a/app/assets/sass/new-header.scss
+++ b/app/assets/sass/new-header.scss
@@ -241,8 +241,9 @@ body .autocomplete-input:focus {
 }
 
 .tab-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
 }
 
 .tab-title {
@@ -268,56 +269,6 @@ body .autocomplete-input:focus {
   color: #0b0c0c;
   text-decoration: none;
 }
- 
-.tab-link:hover {
-  text-decoration: underline;
-}
-
-.tab-selected {
-  font-weight: bold;
-  position: relative;
-}
-
-.tab-selected::before {
-  content: '';
-  position: absolute;
-  left: -15px;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 80%;
-  width: 4px;
-  background-color: #1d70b8;
-}
-
-.tab-container {
-  display: flex;
-  flex-direction: column;
-  max-width: 300px;
-}
-
-.tab-title {
-  font-size: 19px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #0b0c0c;
-}
-
-.tab-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.tab-item {
-  margin-bottom: 5px;
-}
-
-.tab-link {
-  display: inline-block;
-  padding: 5px 15px;
-  color: #333;
-  text-decoration: none;
-}
 
 .tab-link:hover {
   text-decoration: underline;
@@ -329,9 +280,9 @@ body .autocomplete-input:focus {
 }
 
 .tab-selected:before {
-  content: '';
+  content: "";
   position: absolute;
-  left: 0px;
+  left: -15px;
   top: 50%;
   transform: translateY(-50%);
   height: 80%;
@@ -348,7 +299,7 @@ body .autocomplete-input:focus {
 
 .tag {
   display: inline-block;
-  background-color: #F3F2F1;
+  background-color: #f3f2f1;
   padding: 5px 10px;
   border: 1px solid #b1b4b6;
   margin-right: 10px;
